// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter initializes search box value 1`] = `
<div
  class="kuiToolBarSearch"
>
  <div
    class="kuiToolBarSearchBox"
  >
    <div
      class="kuiToolBarSearchBox__icon kuiIcon fa-search"
    />
    <input
      aria-label="Filter"
      class="kuiToolBarSearchBox__input"
      placeholder="Search..."
      type="text"
      value="My Query"
    />
  </div>
</div>
`;

exports[`renders KuiToolBarSearchBox 1`] = `
<div
  aria-label="aria-label"
  class="kuiToolBarSearch testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="kuiToolBarSearchBox"
  >
    <div
      class="kuiToolBarSearchBox__icon kuiIcon fa-search"
    />
    <input
      aria-label="Filter"
      class="kuiToolBarSearchBox__input"
      placeholder="Search..."
      type="text"
    />
  </div>
</div>
`;
